Add images and css stytling

--- a/index.html
+++ b/index.html
@@ -10,44 +10,59 @@
 <body>
   <!-- Header -->
   <header>
-    <title>Tea Cozy Placeholder</title>
+    <figure>
+      <img class="logo" src="images/img-tea-cozy-logo.webp" alt="Site Logo">
+    </figure>
     <nav>
-      <ul>
-        <li>Mission</li>
-        <li>Featured Tea</li>
-        <li>Locations</li>
-      </ul>
+      <p>Mission</p>
+      <p>Featured Tea</p>
+      <p>Locations</p>
     </nav>
   </header>
 
   <!-- Main Section -->
 
   <main>
-    <section>
-      <div id="mission">
+    <section class="mission">
+      <div id="statement">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </section>
 
-    <section>
+    <section class="container-featured">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
-      <div class="box">
-        <h4>Fall Berry Blitz Tea</h4>
+      
+      <div class="featured-items">
+
+        <div class="card">
+          <div class="box" id="one"></div>
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+
+        <div class="card">
+          <div class="box" id="two"></div>
+          <h4>Spiced Rum Tea</h4>
+        </div>
+
+        <div class="card">
+          <div class="box" id="three"></div>
+          <h4>Seasonal Donuts</h4>
+        </div>
+
+        <div class="card">
+          <div class="box" id="four"></div>
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+
+        <div class="card">
+          <div class="box" id="five"></div>
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+
       </div>
-      <div class="box">
-        <h4>Spiced Rum Tea</h4>
-      </div>
-      <div class="box">
-        <h4>Seasonal Donuts</h4>
-      </div>
-      <div class="box">
-        <h4>Myrtle Ave Tea</h4>
-      </div>
-      <div class="box">
-        <h4>Bedford Bizarre Tea</h4>
-      </div>
+
     </section>
 
     <section>
