Add final html and finished styling

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <img class="logo" src="images/img-tea-cozy-logo.webp" alt="Site Logo">
     </figure>
     <nav>
-      <p>Mission</p>
-      <p>Featured Tea</p>
-      <p>Locations</p>
+      <a href="#">Mission</a>
+      <a href="#">Featured Tea</a>
+      <a href="#">Locations</a>
     </nav>
   </header>
 
@@ -35,7 +35,6 @@
       <h4>What's Steeping at The Tea Cozy?</h4>
       
       <div class="featured-items">
-
         <div class="card">
           <div class="box" id="one"></div>
           <h4>Fall Berry Blitz Tea</h4>
@@ -60,30 +59,31 @@
           <div class="box" id="five"></div>
           <h4>Bedford Bizarre Tea</h4>
         </div>
-
       </div>
 
     </section>
 
-    <section>
+    <section id="locations">
       <h2>Locations</h2>
-      <div>
-        <h3>Downtown</h3>
-        <p>384 West 4th St</p>
-        <p>Suite 108</p>
-        <p>Portland, Maine</p>
-      </div>
-      <div>
-        <h3>East Bayside</h3>
-        <p>3433 Phisherman's Avenue</p>
-        <p>(Northwest Corner)</p>
-        <p>Portland, Maine</p>
-      </div>
-      <div>
-        <h3>Oakdale</h3>
-        <p>515 Crescent Avenue</p>
-        <p>Second floor</p>
-        <p>Portland, Maine</p>
+      <div id="address-container">
+        <div class="address-box">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="address-box">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="address-box">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second floor</p>
+          <p>Portland, Maine</p>
+        </div>
       </div>
     </section>
 
@@ -93,7 +93,9 @@
     <h2>The Tea Cozy</h2>
     <h5>contact@theteacozy.com</h5>
     <p>917-555-8904</p>
-    <p>copyright The Tea Cozy 2017</p>
+    <div id="copyright">
+      <p>copyright The Tea Cozy 2017</p>
+    </div>
   </footer>
   
 </body>
